syntax = "proto3";
option java_multiple_files = true;
package com.gpch.grpc.protobuf;

service SentenceCheckerService {
  rpc CheckRDF(CheckRDFRequest) returns (CheckRDFResponse) {};
  rpc ValidateTokenPosition(ValidateTokenPositionRequest) returns (ValidateTokenPositionResponse) {};
}

message CheckRDFRequest {
  string xml_with_rdf = 1;
  string namespace = 2;
}

message CheckRDFResponse {
  repeated string adj_ordering_errors = 1;
  repeated string rdf_model_validation_errors = 2;
}

message ValidateTokenPositionRequest {
  map<string,string> tokens = 1;
  string tokenToCheck = 2;
  uint32 numberOfTask = 3;
}

message ValidateTokenPositionResponse {
  string error = 1;
}
